<resources>
    <string name="app_name" translatable="false">icyapp</string>
    <string name="logo" translatable="false">logo</string>
    <string name="registrati" translatable="false">Registrati</string>
    <string name="accedi" translatable="false">Accedi</string>
    <string name="slogan" translatable="false">L\'arte del Delivery
        nel mondo del Gelato</string>
    <string name="nome_cognome" translatable="false">Nome Cognome</string>
    <string name="password" translatable="false">Password</string>
    <string name="title_activity_home" translatable="false">Home</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name ="home_second_fragment">Home Second Fragment</string>
    <string name ="categorie_principali">Categorie Principali</string>
    <string name="gelateria">Gelateria</string>
    <string name="il_botteghino">Il Botteghino</string>
    <string name="cellulare">Cellulare</string>

</resources>
