<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF31251A "
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="292dp"
            android:layout_height="151dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo__1_" />

        <TextView
            android:id="@+id/txtSlogan"
            android:layout_width="208dp"
            android:layout_height="219dp"
            android:layout_gravity="center"
            android:text="@string/slogan"
            android:textAlignment="center"
            android:textColor="#86754d"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/btnSignUp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="9dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:backgroundTint="#95893C"
            android:shadowColor="@android:color/black"
            android:text="@string/registrati"
            android:textColor="@android:color/white"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnSignIn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="9dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:backgroundTint="#95893C"
            android:shadowColor="@android:color/black"
            android:text="@string/accedi"
            android:textColor="@android:color/white" />

    </LinearLayout>




</RelativeLayout>