<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF31251A"
    tools:context="com.example.icyapp.Model.SignUp">


    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



         <com.rengwuxian.materialedittext.MaterialEditText

            android:id="@+id/edtPhone"
            android:hint="@string/cellulare"
            android:textColorHint="@android:color/white"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:inputType="phone"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            />


         <com.rengwuxian.materialedittext.MaterialEditText

            android:id="@+id/edtName"
            android:hint="@string/nome_cognome"
            android:textColorHint="@android:color/white"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:inputType="textVisiblePassword"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="15"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"

            />

         <com.rengwuxian.materialedittext.MaterialEditText

            android:id="@+id/edtPassword"
            android:hint="@string/password"
            android:textColorHint="@android:color/white"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="1234saaw5D"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:inputType="textPassword"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="15"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"

             tools:ignore="HardcodedText" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="9dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:backgroundTint="#95893C"
        android:shadowColor="@android:color/black"
        android:text="@string/registrati"
        android:textColor="@android:color/white" />

</RelativeLayout>